Bug 114316 - Context Menu doesn't open in full screen mode in Writer with OpenGL rendering
Summary: Context Menu doesn't open in full screen mode in Writer with OpenGL rendering
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.4.2.2 release
Hardware: All Windows (All)
: medium minor
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.3.0 target:6.2.4
Keywords:
Depends on:
Blocks: Impress-OpenGL Full-Screen-Mode VCL-OpenGL
  Show dependency treegraph
 
Reported: 2017-12-07 19:32 UTC by raphazago
Modified: 2019-09-20 13:52 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description raphazago 2017-12-07 19:32:30 UTC
Description:
When I engage full screen mode (ctrl+shift+j)and right click anything to open the menu, Libre Office Writer doesn't do anything, or maybe isn't showing the menu while it's actually there. Getting back to normal screen mode solves this, but entering full screen always bugs the menu.

Steps to Reproduce:
1.Open full screen mode (ctrl+shift+)
2.Right click anything

Actual Results:  
The menu doesn't open

Expected Results:
Open the menu in order to edit text, select correction, etc


Reproducible: Always


User Profile Reset: No



Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:57.0) Gecko/20100101 Firefox/57.0
Comment 1 Dieter 2017-12-08 07:41:28 UTC
I can open the context menu  in full screen mode without any problems. It works with

Version: 5.4.3.2 (x64)
Build-ID: 92a7159f7e4af62137622921e809f8546db437e5
CPU-Threads: 4; Betriebssystem:Windows 6.19; UI-Render: Standard; 
Gebietsschema: it-IT (de_DE); Calc: group

and

Version: 6.0.0.0.beta1 (x64)
Build ID: 97471ab4eb4db4c487195658631696bb3238656c
CPU threads: 4; OS: Windows 10.0; UI render: default; 
Locale: de-DE (de_DE); Calc: group threaded
Comment 2 m_a_riosv 2017-12-09 13:49:13 UTC
Please test if OpenGL is enable Menu/Tools/Options/LibreOffice/View.
Comment 3 raphazago 2017-12-11 02:27:08 UTC
(In reply to m.a.riosv from comment #2)
> Please test if OpenGL is enable Menu/Tools/Options/LibreOffice/View.

OpenGL is enabled by default. When I disable it, the context menu opens normally in full screen.
Comment 4 V Stuart Foote 2017-12-11 03:48:08 UTC
Confirmed on Windows 10 Home 64-bit en-US (ver 1709) with
Version: 5.4.4.1 (x64)
Build ID: da790616461e15a10c95a80eb8ef8ee7b726c114
CPU threads: 4; OS: Windows 6.19; UI render: GL; 
Locale: en-US (en_US); Calc: group

With OpenGL enabled, the context menu in full-screen mode does not respond. No issue with OpenGL disabled and Hardware accelerated rendering or CPU only rendering.
Comment 5 Miklos Vajna 2018-05-16 16:04:34 UTC
I tried to reproduce this on master as of today and it works for me. (Intel card, forcing GL with SAL_FORCEGL=1.)

Is this still reproducible for others? If yes, could you please provide information about your graphic card?

Thanks.
Comment 6 V Stuart Foote 2018-05-17 00:58:52 UTC
@Miklos, *

On Windows 10 Home 64-bit en-US (ver 1803) with Intel HD Graphics 620 (driver	24.20.100.6025)

Still an issue with OpenGL enabled with

Version: 6.1.0.0.alpha1+ (x64)
Build ID: 8162520f251f3382b84d97319ca7facf0bb9c670
CPU threads: 4; OS: Windows 10.0; UI render: GL; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-05-13_00:48:05
Locale: en-US (en_US); Calc: CL

Not only no context menu response, but the "Full screen" pop-up window does not appear--<ESC> / <Ctrl><Shift>+j  to exit Full screen view mode.


Also with latest nightly.

Version: 6.1.0.0.alpha1+ (x64)
Build ID: 29cebedfbdc8a8d3bf47e9a8148dc081bf86eb10
CPU threads: 4; OS: Windows 10.0; UI render: GL; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-05-16_00:28:23
Locale: en-US (en_US); Calc: CL

Some sort of screen buffer issue though--I tried to use <F6> to cycle focus, and the "Full screen" pop-up window appears while a Mouse-Right brings up the context menu. 

But, it seems to not be linked to the document canvas? Clicking into the document text shifts the canvas to the front. Another <F6> brings the pop-up and the context menu to the front.

Behaves as expected with Default rendering, but with OpenGL rendering there is this weird graphics behavior...
Comment 7 Xisco Faulí 2018-05-31 15:03:34 UTC
I can't reproduce it in

Version: 6.0.3.2
Build ID: 8f48d515416608e3a835360314dac7e47fd0b821
CPU threads: 8; OS: Mac OS X 10.13.3; UI render: GL; 
Locale: en-US (en_ES.UTF-8); Calc: group
Comment 8 Miklos Vajna 2019-03-29 15:27:34 UTC
No idea what was changed, but now I can reproduce this on master (on Windows, GL is on), commit 92990b12f900ac0a12ce006f63b8c3d0f09b6b2f (tdf#124149 add bigger 32px icons for border line and shadow, 2019-03-29).

I'll take a look at this, let's see if I get anywhere.
Comment 9 Miklos Vajna 2019-04-01 13:40:16 UTC
This is not specific to Writer, Calc full-screen has the same problem, by the way.
Comment 10 Miklos Vajna 2019-04-02 10:46:35 UTC
Also: now I tested this with an intel and an nvidia card: the intel one reproduces this, the nvidia one does not.
Comment 11 Miklos Vajna 2019-04-03 08:03:11 UTC
I think the root of the problem is that currently we play ugly tricks when going fullscreen: we preserve the window caption and border, then we position the window to some negative position to compensate and this breaks the intel driver.

I'll check if we could do it similar to Chromium that just sets the right window flags so the window has no border / caption, so positioning to 0,0 is enough.
Comment 12 Aron Budea 2019-04-03 09:25:51 UTC
(In reply to Miklos Vajna from comment #10)
> Also: now I tested this with an intel and an nvidia card: the intel one
> reproduces this, the nvidia one does not.
And I tested with an AMD card, no repro with that (but I could repro with an Intel IGP).
Comment 13 Commit Notification 2019-04-03 12:10:48 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/c31734d0e49a778cffb1fdc3cd04adb45270e1da%5E%21

tdf#114316 vcl opengl windows: fix missing context menu in full-screen mode

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2019-04-05 07:51:43 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/52a8d0c0f4d61a1caa54331a20703175b83a5fe6%5E%21

tdf#114316 vcl opengl windows: fix missing context menu in full-screen mode

It will be available in 6.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.